--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.6",
     "@tailwindcss/forms": "^0.5.3",
+    "airtable": "^0.11.6",
+    "axios": "^1.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
