--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "next-plausible": "^3.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
