--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.6",
+    "@prisma/client": "^4.10.1",
     "@tailwindcss/forms": "^0.5.3",
     "airtable": "^0.11.6",
     "axios": "^1.3.2",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prisma": "^4.10.1",
     "tailwindcss": "^3.2.4"
   }
 }
