--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-auth": "^4.19.2",
     "next-plausible": "^3.7.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "reactflow": "^11.6.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
