--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "airtable": "^0.11.6",
     "axios": "^1.3.2",
+    "dotenv": "^16.1.4",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
